Make compatibile with java 8